fixed categories render on mobile device to look as the proposed design.

--- a/src/Components/Categories/Categories.scss
+++ b/src/Components/Categories/Categories.scss
@@ -9,10 +9,22 @@
   background: linear-gradient(to right, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1.0));
   transition: 0.2s ease;
   pointer-events: none;
+}
 
-  @include media('<tablet') {
-    display: none;
-  }
+.mobileSearchCategories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    color: white;
+
+    span {
+      margin-right: 20px;
+      margin-bottom: 20px;
+  
+      &:hover {
+        cursor: pointer;
+      }
+    }
 }
 
 .categories {
@@ -20,16 +32,10 @@
   white-space: nowrap;
   scroll-behavior: smooth;
 
-  // margin-right: 400px;
   &::-webkit-scrollbar {
     display: none;
   }
 
-  @include media('<tablet') {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
 
   /* Hide scrollbar for IE, Edge and Firefox */
 
